# eos_sdk_emu

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  build_epicapi.sh  build_protobuf.sh  build_zstd.sh  ci_versionning.sh  rebuilt_protobuf.bat
NemirtingasEmuLauncher/: App.xaml  App.xaml.cs  NemirtingasEmuLauncher.csproj  NemirtingasEmuLauncher.sln  Program.cs  README.txt  appsettings.json
NemirtingasEmuLauncher/EOSEmu/: ApiResult.cs  EmuConfig.cs  EmuStringsConfig.cs  EnvVar.cs  EosProductId.cs  EpicEmulator.cs  GameConfig.cs  SavedConf.cs
NemirtingasEmuLauncher/HeaderReader/: BaseHeaderReader.cs  ElfHeaderReader.cs  ExecutableHeaderReader.cs  MachOHeaderReader.cs  PeHeaderReader.cs
NemirtingasEmuLauncher/OSUtility/: OSDetector.cs  OSFuncs.cs  OsId.cs  Shortcut.cs
NemirtingasEmuLauncher/Resources/: no_image.xcf
NemirtingasEmuLauncher/Tool/: ObservableCollectionAndItems.cs  StringToBrushConverter.cs
NemirtingasEmuLauncher/ViewModels/: AboutViewModel.cs  MainWindowViewModel.cs  SettingsViewModel.cs  ViewModelBase.cs
NemirtingasEmuLauncher/Windows/: About.xaml  About.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Settings.xaml  Settings.xaml.cs
cmake/: FindZSTD.cmake
dll_tester/: Log.cpp  Log.h  dll_tester.cpp  utils.h
dll_tester/eos_sdk/: eos_achievements.h  eos_achievements_types1.6.1.h  eos_achievements_types_deprecated.inl  eos_auth_types.h  eos_auth_types1.3.1.h  eos_auth_types1.6.0.h  eos_auth_types1.7.0.h  eos_auth_types1.8.0.h  eos_common1.6.1.h  eos_connect.h  eos_connect_types.h  eos_connect_types1.6.0.h  eos_connect_types1.7.0.h  eos_connect_types1.8.0.h  eos_ecom_types1.5.0.h  eos_friends_types.h  eos_friends_types1.5.0.h  eos_init1.5.0.h  eos_leaderboards_types.h  eos_leaderboards_types1.6.0.h  eos_leaderboards_types1.8.0.h  eos_lobby.h  eos_lobby_types.h  eos_lobby_types1.6.0.h  eos_lobby_types1.8.0.h  eos_metrics.h  eos_metrics_types.h  eos_p2p.h  eos_p2p_types.h  eos_playerdatastorage_types.h  eos_playerdatastorage_types1.8.0.h  eos_presence_types.h  eos_presence_types1.6.0.h  eos_presence_types1.8.0.h  eos_sdk.h  eos_sessions_types.h  eos_sessions_types1.7.0.h  eos_sessions_types1.8.0.h  eos_stats_types.h  eos_stats_types1.5.0.h  (+9 more)
dll_tester/mini_detour/: mini_detour.cpp  mini_detour_x64.h
eos_dll/: Log.cpp  Log.h  callback_manager.cpp  callback_manager.h  common_includes.h  easy_curl.cpp  easy_curl.h  eos_achievements.cpp  eos_achievements.h  eos_achievements_flat.cpp  eos_auth.cpp  eos_auth.h  eos_auth_flat.cpp  eos_client_api.cpp  eos_client_api.h  eos_connect.cpp  eos_connect.h  eos_connect_flat.cpp  eos_ecom.cpp  eos_ecom.h  eos_ecom_flat.cpp  eos_epicaccountiddetails.cpp  eos_epicaccountiddetails.h  eos_flat_platform.cpp  eos_friends.cpp  eos_friends.h  eos_friends_flat.cpp  eos_leaderboards.cpp  eos_leaderboards.h  eos_leaderboards_flat.cpp  eos_lobby.cpp  eos_lobby.h  eos_lobby_flat.cpp  eos_metrics.cpp  eos_metrics.h  eos_metrics_flat.cpp  eos_p2p.cpp  eos_p2p.h  eos_p2p_flat.cpp  eos_platform.cpp  (+78 more)
examples/: NemirtingasEpicEmu.json  entitlements.json  entitlements_db.json  readme.txt
extra/Socket/: .doxygen  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md
extra/Socket/include/socket/bluetooth/: bluetooth_socket.h  bth_addr.h  rfcomm_socket.h
extra/Socket/include/socket/common/: basic_socket.h  basic_socket.inl  poll.h  socket.h
extra/Socket/include/socket/ipv4/: ipv4_addr.h  tcp_socket.h  udp_socket.h
extra/Socket/include/socket/ipv6/: ipv6_addr.h  tcp6_socket.h  udp6_socket.h
extra/Socket/include/socket/unix/: unix_addr.h  unix_socket.h
extra/Socket/src/bluetooth/: bluetooth_socket.cpp
extra/Socket/src/common/: socket.cpp
extra/Socket/tests/: ipv4_tests.cpp
extra/curl/: CMakeLists.txt
extra/eos_sdk/: eos_achievements.h  eos_achievements_types.h  eos_achievements_types1.5.0.h  eos_achievements_types1.6.0.h  eos_achievements_types1.8.0.h  eos_auth.h  eos_auth_types.h  eos_auth_types1.5.0.h  eos_common.h  eos_common1.14.1.h  eos_common1.16.4.h  eos_common1.5.0.h  eos_common1.6.0.h  eos_common1.8.0.h  eos_connect.h  eos_connect_types.h  eos_connect_types1.5.0.h  eos_connect_types1.8.0.h  eos_ecom_types.h  eos_ecom_types1.5.0.h  eos_ecom_types1.8.0.h  eos_friends.h  eos_friends_types.h  eos_friends_types1.5.0.h  eos_friends_types1.8.0.h  eos_init.h  eos_init1.10.0.h  eos_init1.16.4.h  eos_init1.8.0.h  eos_leaderboards.h  eos_leaderboards_types.h  eos_leaderboards_types1.5.0.h  eos_lobby.h  eos_lobby_types.h  eos_lobby_types1.14.2.h  eos_lobby_types1.16.4.h  eos_lobby_types1.5.0.h  eos_lobby_types1.7.0.h  eos_lobby_types1.7.1.h  eos_lobby_types1.8.0.h  (+46 more)
extra/mini_detour/: mini_detour.cpp  mini_detour.h  mini_detour_x64.h  mini_detour_x86.h
extra/protobuf/: CMakeLists.txt
extra/utils/: CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  install_manifest.txt
extra/utils/include/utils/: class_enum.hpp  constexpr_count.hpp  endianness.hpp  istring.hpp  scoped_lock.hpp  strings.hpp  switchstr.hpp  utils_exports.h  utils_osdetector.h
extra/utils/src/: utils_exports.cpp
extra/zstd/: CMakeLists.txt
managers/: file_manager.cpp  file_manager.h
overlay/: Base_Hook.cpp  Base_Hook.h  Hook_Manager.cpp  Hook_Manager.h
proto/: network_proto.proto
public/: index.html
staruml/: network.mdj
vcpkg_triplets/: x64-windows-nemirtingas.cmake  x86-linux-nemirtingas.cmake
vcpkg_tripplets/: x64-linux-nemirtingas.cmake  x64-macosx-nemirtingas.cmake  x86-macosx-nemirtingas.cmake  x86-windows-nemirtingas.cmake
